// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstructorCoursesPageComponent should snap when archived courses are expanded 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded={[Function Boolean]}
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              <i
                class="fas fa-chevron-up"
              />
            </div>
          </tm-panel-chevron>
        </div>
      </div>
      <div
        class="card-body archive-body table-responsive ng-trigger ng-trigger-collapseAnim ng-animating"
        style=""
      >
        <table
          class="table table-striped table-bordered archive-table"
          id="archived-courses-table"
        >
          <thead>
            <tr
              class="background-color-medium-gray text-color-gray"
            >
              <th
                class="sortable-header"
              >
                 Course ID 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </th>
              <th
                class="sortable-header"
              >
                 Course Name 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                  <i
                    class="fas fa-sort-up"
                    style=""
                  />
                </span>
              </th>
              <th
                class="sortable-header"
              >
                 Creation Date 
                <span
                  class="fa-stack"
                >
                  <i
                    class="fas fa-sort"
                  />
                </span>
              </th>
              <th
                class="text-center"
              >
                Action(s)
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              style=""
            >
              <td
                class="text-break"
                id="archived-course-id-0"
              >
                CS2104
              </td>
              <td
                class="text-break"
              >
                Can modify archived
              </td>
              <td>
                <span
                  class="ngb-tooltip-class"
                  container="body"
                >
                  5 Nov 2002
                </span>
              </td>
              <td
                class="text-center actions-cell"
              >
                <button
                  class="btn btn-light btn-sm"
                  id="btn-unarchive-0"
                >
                   Unarchive 
                </button>
                <button
                  class="btn btn-light btn-sm"
                  id="btn-soft-delete-archived-0"
                  ngbtooltip="Delete the course and its corresponding students and sessions"
                >
                   Delete 
                </button>
              </td>
            </tr>
            <tr
              style=""
            >
              <td
                class="text-break"
                id="archived-course-id-1"
              >
                CS2106
              </td>
              <td
                class="text-break"
              >
                Cannot modify archived
              </td>
              <td>
                <span
                  class="ngb-tooltip-class"
                  container="body"
                >
                  5 Nov 2002
                </span>
              </td>
              <td
                class="text-center actions-cell"
              >
                <button
                  class="btn btn-light btn-sm"
                  id="btn-unarchive-1"
                >
                   Unarchive 
                </button>
                <button
                  class="btn btn-light btn-sm disabled"
                  id="btn-soft-delete-archived-disabled-1"
                >
                   Delete 
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when courses are still loading 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when it is undeletable and unrestorable 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll="false"
  canRestoreAll="false"
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div>
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              <i
                class="fas fa-chevron-down"
              />
            </div>
          </tm-panel-chevron>
        </div>
      </div>
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary text-white cursor-pointer"
          id="deleted-table-heading"
        >
          <b>
            Recycle Bin
          </b>
          <div
            class="card-header-btn-toolbar"
          >
            <button
              class="btn btn-secondary btn-sm disabled"
            >
              <i
                class="fas fa-check"
              />
               Restore All 
            </button>
            <button
              class="btn btn-secondary btn-sm disabled"
            >
              <i
                class="fas fa-times"
              />
               Delete All 
            </button>
            <tm-panel-chevron>
              <div
                class="chevron"
              >
                <i
                  class="fas fa-chevron-down"
                />
              </div>
            </tm-panel-chevron>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap when new course form is expanded 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded={[Function Boolean]}
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><div
    class="course-section ng-trigger ng-trigger-collapseAnim ng-animating"
    id="add-course-section"
    style=""
  >
    <tm-course-edit-form>
      <div
        class="card-header bg-primary text-white"
      >
        <strong
          style=""
        >
          Create a new Course
        </strong>
        <div
          class="card-header-btn-toolbar"
        >
          <button
            class="btn btn-primary btn-sm"
            disabled=""
            id="btn-copy-course"
            style=""
          >
            <i
              aria-hidden="true"
              class="fa fa-copy"
            />
             Copy from previous courses 
          </button>
          <button
            class="btn btn-primary btn-sm"
            id="btn-close-form"
            style=""
          >
            <i
              aria-hidden="true"
              class="fa fa-times"
            />
          </button>
        </div>
      </div>
      <div
        class="card-body fill-plain"
      >
        <form
          class="ng-untouched ng-pristine ng-valid"
          novalidate=""
        >
          <div
            class="form-row form-group"
          >
            <label
              class="col-sm-2 font-weight-bold text-md-right"
            >
              Course ID:
            </label>
            <div
              class="col-sm-9"
            >
              <input
                class="col-xs-12 form-control ng-untouched ng-pristine ng-valid"
                id="course-id"
                maxlength="64"
                name="courseId"
                placeholder="e.g. CS3215-2013Semester1"
                required=""
                tabindex="1"
                type="text"
              />
              <div
                class="invalid-field"
                hidden=""
              >
                <i
                  aria-hidden="true"
                  class="fa fa-exclamation-circle"
                />
                 The field Course ID should not be empty. 
              </div>
            </div>
          </div>
          <div
            class="form-row form-group"
          >
            <label
              class="col-sm-2 font-weight-bold text-md-right"
            >
              Course Name:
            </label>
            <div
              class="col-sm-9"
            >
              <input
                class="form-control ng-untouched ng-pristine ng-valid"
                id="course-name"
                maxlength="80"
                name="courseName"
                placeholder="e.g. Software Engineering"
                required=""
                tabindex="2"
                type="text"
              />
              <div
                class="invalid-field"
                hidden=""
              >
                <i
                  aria-hidden="true"
                  class="fa fa-exclamation-circle"
                />
                 The field Course Name should not be empty. 
              </div>
            </div>
          </div>
          <div
            class="form-row form-group"
          >
            <label
              class="col-sm-2 font-weight-bold text-md-right"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="Note that you can only create a new course under an institute in which you are already a course co-owner."
                style=""
              >
                 Course institute: 
              </span>
            </label>
            <div
              class="col-sm-9"
            >
              <select
                class="col-xs-12 form-control ng-untouched ng-pristine ng-valid"
                id="course-institute"
                name="institute"
                required=""
                type="text"
              >
              </select>
            </div>
          </div>
          <div
            class="form-row form-group"
          >
            <label
              class="col-xs-12 col-sm-2 font-weight-bold text-md-right"
            >
              <span
                class="ngb-tooltip-class"
                ngbtooltip="You should not need to change this as it is auto-detected based on your
                  device settings. TEAMMATES automatically adjusts to match the current time offset in your area, including clock changes due to daylight saving time."
              >
                 Time Zone:
              </span>
            </label>
            <div
              class="col-xs-12 col-sm-9"
            >
              <div
                class="input-group"
              >
                <select
                  class="form-control ng-untouched ng-pristine ng-valid"
                  id="time-zone"
                  name="timeZone"
                  required=""
                >
                  <option
                    style=""
                    value="Jamaica"
                  >
                    Jamaica (UTC -05:00)
                  </option>
                  <option
                    style=""
                    value="Portugal"
                  >
                    Portugal (UTC)
                  </option>
                  <option
                    style=""
                    value="Singapore"
                  >
                    Singapore (UTC +08:00)
                  </option>
                  <option
                    style=""
                    value="Turkey"
                  >
                    Turkey (UTC +03:00)
                  </option>
                </select>
                <span
                  class="input-group-btn"
                >
                  <button
                    class="btn btn-primary"
                    type="button"
                  >
                     Auto-Detect 
                  </button>
                </span>
              </div>
            </div>
          </div>
          <div
            class="form-group m-0"
          >
            <div
              class="col-sm-12 text-center"
            >
              <button
                class="btn btn-success"
                disabled=""
                id="btn-submit-course"
                style=""
                type="submit"
              >
                 Add Course 
              </button>
            </div>
          </div>
        </form>
      </div>
    </tm-course-edit-form>
  </div><tm-loading-retry>
    <div>
      <div
        class="alert alert-warning margin-top-30px"
        role="alert"
      >
         You do not seem to have any active courses. Use the button above to create a new course. 
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with all courses in course stats 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div>
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td>
                  <span>
                     1 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td>
                  <span>
                     2 
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </tm-loading-retry><div
    class="course-section"
  >
    <h3
      class="text-muted"
    >
      <span
        class="fa fa-file-archive"
      />
       Archived courses 
    </h3>
    <div
      class="card top-padded"
    >
      <div
        class="card-header bg-info text-white cursor-pointer"
        id="archived-table-heading"
      >
        <b>
          Archive
        </b>
        <div
          class="card-header-btn-toolbar"
        >
          <tm-panel-chevron>
            <div
              class="chevron"
            >
              <i
                class="fas fa-chevron-down"
              />
            </div>
          </tm-panel-chevron>
        </div>
      </div>
    </div>
  </div><div
    class="row course-section margin-top-30px"
  >
    <div
      class="col-12"
    >
      <h3
        class="text-muted"
      >
        <span
          class="fa fa-trash-alt"
        />
         Deleted courses 
      </h3>
      <div
        class="card bg-light top-padded"
      >
        <div
          class="card-header bg-secondary text-white cursor-pointer"
          id="deleted-table-heading"
        >
          <b>
            Recycle Bin
          </b>
          <div
            class="card-header-btn-toolbar"
          >
            <button
              class="btn btn-secondary btn-sm"
              id="btn-restore-all"
              ngbtooltip="Restore all deleted courses and their corresponding students and sessions"
            >
              <i
                class="fas fa-check"
              />
               Restore All 
            </button>
            <button
              class="btn btn-secondary btn-sm"
              id="btn-delete-all"
              ngbtooltip="Permanently delete all courses and their corresponding students and sessions"
            >
              <i
                class="fas fa-times"
              />
               Delete All 
            </button>
            <tm-panel-chevron>
              <div
                class="chevron"
              >
                <i
                  class="fas fa-chevron-down"
                />
              </div>
            </tm-panel-chevron>
          </div>
        </div>
      </div>
    </div>
  </div>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with default fields 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading={[Function Boolean]}
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      disabled=""
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry>
</tm-instructor-courses-page>
`;

exports[`InstructorCoursesPageComponent should snap with no courses in course stats 1`] = `
<tm-instructor-courses-page
  CourseEditFormMode={[Function Object]}
  SortBy={[Function Object]}
  SortOrder={[Function Object]}
  __ngContext__={[Function LRootView]}
  activeCourses={[Function Array]}
  activeCoursesList={[Function Array]}
  activeTableSortBy={[Function Number]}
  activeTableSortOrder={[Function Number]}
  allCoursesList={[Function Array]}
  archivedCourses={[Function Array]}
  archivedTableSortBy={[Function Number]}
  archivedTableSortOrder={[Function Number]}
  canDeleteAll={[Function Boolean]}
  canRestoreAll={[Function Boolean]}
  copyProgressPercentage="0"
  courseAdded={[Function EventEmitter_]}
  courseFormModel={[Function Object]}
  courseService={[Function CourseService]}
  courseStats={[Function Object]}
  deletedTableSortBy={[Function Number]}
  deletedTableSortOrder={[Function Number]}
  feedbackSessionsService={[Function FeedbackSessionsService]}
  hasLoadingFailed="false"
  isAddNewCourseFormExpanded="false"
  isArchivedCourseExpanded="false"
  isCopyingCourse="false"
  isLoading="false"
  isRecycleBinExpanded="false"
  modifiedSessions={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef2]}
  ngbModal={[Function NgbModal]}
  numberOfSessionsCopied="0"
  progressBarService={[Function ProgressBarService]}
  resetCourseForm={[Function EventEmitter_]}
  route={[Function ActivatedRoute]}
  simpleModalService={[Function SimpleModalService]}
  softDeletedCourses={[Function Array]}
  statusMessageService={[Function StatusMessageService]}
  studentService={[Function StudentService]}
  tableComparatorService={[Function TableComparatorService]}
  timezoneService={[Function TimezoneService]}
  totalNumberOfSessionsToCopy="0"
>
  <div>
    <button
      class="btn btn-success"
      id="btn-add-course"
    >
      <i
        class="fas fa-plus"
      />
       Add New Course 
    </button>
  </div><tm-loading-retry>
    <div>
      <div
        class="course-section"
      >
        <h3>
          Active courses
        </h3>
        <div
          class="table table-responsive"
        >
          <table
            class="table table-striped table-bordered margin-0"
            id="active-courses-table"
          >
            <thead>
              <tr
                class="bg-primary text-white"
              >
                <th
                  class="sortable-header"
                  id="sort-course-id"
                >
                   Course ID 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-course-name"
                >
                   Course Name 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                  </span>
                </th>
                <th
                  class="sortable-header"
                  id="sort-creation-date"
                >
                   Creation Date 
                  <span
                    class="fa-stack"
                  >
                    <i
                      class="fas fa-sort"
                    />
                    <i
                      class="fas fa-sort-up"
                    />
                  </span>
                </th>
                <th>
                  Sections
                </th>
                <th>
                  Teams
                </th>
                <th>
                  Total Students
                </th>
                <th>
                  Total Unregistered
                </th>
                <th
                  class="text-center"
                >
                  Action(s)
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  class="text-break"
                  id="course-id-0"
                >
                  CS3281
                </td>
                <td
                  class="text-break"
                >
                  Modifiable Students and Courses
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     5 Nov 2018 
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a
                      id="show-statistics-0"
                    >
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <a
                    class="btn btn-light btn-sm"
                    href="/web/instructor/courses/enroll?courseid=CS3281"
                    id="btn-enroll-0"
                    ngbtooltip="Enroll student into the course"
                    tmrouterlink="/web/instructor/courses/enroll"
                  >
                     Enroll 
                  </a>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-0"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3281"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-copy-0"
                        ngbtooltip="Copy the course and its corresponding sessions"
                        placement="left"
                      >
                         Copy 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-0"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-soft-delete-0"
                        ngbtooltip="Delete the course and its corresponding students and sessions"
                        placement="left"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td
                  class="text-break"
                  id="course-id-1"
                >
                  CS3282
                </td>
                <td
                  class="text-break"
                >
                  Nothing modifiable
                </td>
                <td>
                  <span
                    class="ngb-tooltip-class"
                    container="body"
                  >
                     2 Feb 2019 
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a
                      id="show-statistics-1"
                    >
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td>
                  <span>
                    <a>
                       Show 
                    </a>
                  </span>
                </td>
                <td
                  class="text-center actions-cell"
                >
                  <button
                    class="btn btn-light btn-sm disabled"
                    id="btn-enroll-disabled-1"
                  >
                     Enroll 
                  </button>
                  <div
                    class="d-inline-block dropdown"
                    ngbdropdown=""
                  >
                    <button
                      aria-expanded="false"
                      class="dropdown-toggle btn btn-light btn-sm"
                      id="btn-other-actions-1"
                      ngbdropdowntoggle=""
                    >
                      Other Actions
                    </button>
                    <div
                      class="dropdown-menu"
                      ngbdropdownmenu=""
                      x-placement="bottom"
                    >
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/details?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/details"
                      >
                         View 
                      </a>
                      <a
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        href="/web/instructor/courses/edit?courseid=CS3282"
                        tmrouterlink="/web/instructor/courses/edit"
                      >
                         Edit 
                      </a>
                      <button
                        class="btn btn-primary btn-sm dropdown-item clickable"
                        container="body"
                        id="btn-archive-1"
                        ngbtooltip="Archive the course so that it will not be shown in the home page any more (you can still access it from the 'Courses' tab)"
                        placement="left"
                      >
                         Archive 
                      </button>
                      <button
                        class="btn btn-primary btn-sm dropdown-item disabled"
                        id="btn-soft-delete-disabled-1"
                      >
                         Delete 
                      </button>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </tm-loading-retry>
</tm-instructor-courses-page>
`;
